wip: editar perfil fix

--- a/src/app/Cliente/perfil/editar-perfil/editar-perfil.component.html
+++ b/src/app/Cliente/perfil/editar-perfil/editar-perfil.component.html
@@ -1,109 +1,66 @@
 <div class="container-fluid">
-  
     <div class="row">
       <div class="col-md-2">
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="height: 100vh;">
-          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <span class="fs-4">Paciente</span>
-          </a>
-          <hr>
-          <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item">
-              <a href="#" class="nav-link active">
-                Início
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                Perfil
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                Testes
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                Pacientes
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                Resultados
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                Logout
-              </a>
-            </li>
-          </ul>
-        </div>
+
       </div>
-      <div class="col-md-10">
+      <div class="col-md-10 pt-5">
         <h2 class="titulo">Editar perfil</h2>
-    
         <form>
           <div class="row">
             <div class="col-md-6">
-              <div class="mb-3">
-                <label for="nome" class="form-label">Nome</label>
+              <div class="mb-1">
+                <label for="nome" class="form-label"><strong>Nome</strong></label>
               </div>
-      
               <div class="mb-3">
-                <label for="sobrenome" class="form-label">Sobrenome</label>
+                <label for="sobrenome" class="form-label"><strong>Sobrenome</strong></label>
               </div>
-      
               <div class="mb-3">
-                <label for="telefone" class="form-label">Telefone</label>
+                <label for="telefone" class="form-label"><strong>Telefone</strong></label>
                 <input id="telefone" type="tel" class="form-control" placeholder="(XX) XXXXX-XXXX" />
               </div>
-      
               <div class="mb-3">
-                <label for="foto" class="form-label">Foto</label>
+                <label for="foto" class="form-label"><strong>Foto</strong></label>
                 <div class="border bg-light d-flex align-items-center justify-content-center" style="height: 150px;">
                   Foto
                 </div>
               </div>
             </div>
-    
+
             <div class="col-md-6">
               <div class="mb-3">
-                <label for="endereco" class="form-label">Endereço Atual:</label>
+                <label for="endereco" class="form-label"><strong>Endereço Atual:</strong></label>
               </div>
-      
+
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <label for="cep" class="form-label">CEP</label>
+                  <label for="cep" class="form-label"><strong>CEP</strong></label>
                   <input id="cep" type="text" class="form-control" placeholder="XXXXX-XXX" />
                 </div>
-      
+
                 <div class="col-md-6 mb-3">
-                  <label for="rua" class="form-label">Rua</label>
+                  <label for="rua" class="form-label"><strong>Rua</strong></label>
                   <input id="rua" type="text" class="form-control" placeholder="Nome da rua" />
                 </div>
               </div>
-      
+
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <label for="numero" class="form-label">Número</label>
+                  <label for="numero" class="form-label"><strong>Número</strong></label>
                   <input id="numero" type="text" class="form-control" placeholder="Número da residência" />
                 </div>
-      
+
                 <div class="col-md-6 mb-3">
-                  <label for="bairro" class="form-label">Bairro</label>
+                  <label for="bairro" class="form-label"><strong>Bairro</strong></label>
                   <input id="bairro" type="text" class="form-control" placeholder="Nome do bairro" />
                 </div>
               </div>
-      
+
               <div class="mb-3">
-                <label for="estado" class="form-label">Estado</label>
+                <label for="estado" class="form-label"><strong>Estado</strong></label>
                 <input id="estado" type="text" class="form-control" placeholder="Estado" />
               </div>
-            </div>
-      </div>
-    
-    
-  
-  
+  </div>
+</div>
+
+
+
