--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,6 +1,7 @@
 .container {
     background: linear-gradient(135deg, #a4dada, #bca9df);
-    height: 100vh;
+    width: 100%;
+    height: 100%;
   }
 
   .login-card {
@@ -24,7 +25,7 @@
   }
 
   form button {
-    background-color: #9e6dbe;
+    background-color: #4f48b8;
     border: none;
     border-radius: 10px;
     padding: 5px;
