--- a/src/styles.css
+++ b/src/styles.css
@@ -1,67 +1,65 @@
+/* Estilos gerais do corpo */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+}
 .navbar {
-  background-color: #1d0f2b;
+  position: fixed;
+  width: 250px;
+  height: 100%;
+  background-color: #4a1392;
+  padding-top: 20px;
+  left: -250px;
+  transition: 0.3s;
+  z-index: 1000;
 }
 
-.navbar-brand {
-  color: #fff;
-  font-size: 1rem;
-  font-weight: bold;
-  transition: color 0.3s ease;
-}
-
-.navbar-brand:hover {
-  color: #000000;
-}
-
-.navbar-nav .nav-link {
-  color: #ffffff;
-  font-size: 1.1rem;
-  margin-right: 1.5rem;
-  transition: all 0.3s ease;
-  position: relative;
-}
-
-.navbar-nav .nav-link:hover {
-  color: #fcfcfc;
-  transform: translateY(-2px);
-}
-
-.navbar-nav .nav-link::after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 2px;
-  background-color: #ffffff;
+.navbar.open {
   left: 0;
-  bottom: -4px;
-  transition: width 0.3s ease;
 }
-
-.navbar-nav .nav-link:hover::after {
-  width: 100%;
+.navbar-brand {
+  padding-left: 20px;
 }
-
+.navbar-nav {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+}
+.nav-item {
+  margin-bottom: 20px;
+}
+.nav-link {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  transition: 0.3s;
+}
+.nav-link:hover {
+  color: #d4d4d4;
+}
 .navbar-toggler {
-  border-color: #ffffff;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 1100;
 }
-
-.navbar-collapse {
-  justify-content: flex-end;
+.navbar-toggler-icon {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: rgb(0, 0, 0);
+  margin: 5px 0;
 }
-
-@media (max-width: 992px) {
-  .navbar {
-    padding: 1rem;
-  }
-
-  .navbar-nav .nav-link {
-    margin-right: 0;
-    margin-bottom: 1rem;
-    font-size: 1.3rem;
-  }
+.main-content {
+  margin-left: 0;
+  transition: margin-left 0.3s;
 }
-
+.main-content.shifted {
+  margin-left: 250px;
+}
 img {
-  width: 50px;
-  margin-left: 10px;
+  width: 100px;
 }
