--- a/src/app/Cliente/perfil/editar-perfil/editar-perfil.component.html
+++ b/src/app/Cliente/perfil/editar-perfil/editar-perfil.component.html
@@ -1,66 +1,63 @@
 <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-2">
-
-      </div>
-      <div class="col-md-10 pt-5">
-        <h2 class="titulo">Editar perfil</h2>
-        <form>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="mb-1">
-                <label for="nome" class="form-label"><strong>Nome</strong></label>
-              </div>
-              <div class="mb-3">
-                <label for="sobrenome" class="form-label"><strong>Sobrenome</strong></label>
-              </div>
-              <div class="mb-3">
-                <label for="telefone" class="form-label"><strong>Telefone</strong></label>
-                <input id="telefone" type="tel" class="form-control" placeholder="(XX) XXXXX-XXXX" />
-              </div>
-              <div class="mb-3">
-                <label for="foto" class="form-label"><strong>Foto</strong></label>
-                <div class="border bg-light d-flex align-items-center justify-content-center" style="height: 150px;">
-                  Foto
-                </div>
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-10 pt-5">
+      <h2 class="titulo">Editar Perfil</h2>
+      <form>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="nome" class="form-label"><strong>Nome</strong></label>
+              <input id="nome" type="text" class="form-control" placeholder="Digite seu nome" />
+            </div>
+            <div class="mb-3">
+              <label for="sobrenome" class="form-label"><strong>Sobrenome</strong></label>
+              <input id="sobrenome" type="text" class="form-control" placeholder="Digite seu sobrenome" />
+            </div>
+            <div class="mb-3">
+              <label for="telefone" class="form-label"><strong>Telefone</strong></label>
+              <input id="telefone" type="tel" class="form-control" placeholder="(XX) XXXXX-XXXX" />
+            </div>
+            <div class="mb-3">
+              <label for="foto" class="form-label"><strong>Foto</strong></label>
+              <div class="foto-placeholder d-flex align-items-center justify-content-center">
+                Foto
               </div>
             </div>
-
-            <div class="col-md-6">
-              <div class="mb-3">
-                <label for="endereco" class="form-label"><strong>Endereço Atual:</strong></label>
+          </div>
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="endereco" class="form-label"><strong>Endereço Atual:</strong></label>
+              <input id="endereco" type="text" class="form-control" placeholder="Digite seu endereço" />
+            </div>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="cep" class="form-label"><strong>CEP</strong></label>
+                <input id="cep" type="text" class="form-control" placeholder="XXXXX-XXX" />
               </div>
-
-              <div class="row">
-                <div class="col-md-6 mb-3">
-                  <label for="cep" class="form-label"><strong>CEP</strong></label>
-                  <input id="cep" type="text" class="form-control" placeholder="XXXXX-XXX" />
-                </div>
-
-                <div class="col-md-6 mb-3">
-                  <label for="rua" class="form-label"><strong>Rua</strong></label>
-                  <input id="rua" type="text" class="form-control" placeholder="Nome da rua" />
-                </div>
+              <div class="col-md-6 mb-3">
+                <label for="rua" class="form-label"><strong>Rua</strong></label>
+                <input id="rua" type="text" class="form-control" placeholder="Nome da rua" />
               </div>
-
-              <div class="row">
-                <div class="col-md-6 mb-3">
-                  <label for="numero" class="form-label"><strong>Número</strong></label>
-                  <input id="numero" type="text" class="form-control" placeholder="Número da residência" />
-                </div>
-
-                <div class="col-md-6 mb-3">
-                  <label for="bairro" class="form-label"><strong>Bairro</strong></label>
-                  <input id="bairro" type="text" class="form-control" placeholder="Nome do bairro" />
-                </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="numero" class="form-label"><strong>Número</strong></label>
+                <input id="numero" type="text" class="form-control" placeholder="Número da residência" />
               </div>
-
-              <div class="mb-3">
-                <label for="estado" class="form-label"><strong>Estado</strong></label>
-                <input id="estado" type="text" class="form-control" placeholder="Estado" />
+              <div class="col-md-6 mb-3">
+                <label for="bairro" class="form-label"><strong>Bairro</strong></label>
+                <input id="bairro" type="text" class="form-control" placeholder="Nome do bairro" />
               </div>
+            </div>
+            <div class="mb-3">
+              <label for="estado" class="form-label"><strong>Estado</strong></label>
+              <input id="estado" type="text" class="form-control" placeholder="Estado" />
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
-
-
 
