--- a/src/styles.css
+++ b/src/styles.css
@@ -1,65 +1,83 @@
-/* Estilos gerais do corpo */
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+
 .navbar {
+  width: 240px;
+  background-color: #8e66ec;
+  transition: width 0.3s;
+  height: 100vh;
   position: fixed;
-  width: 250px;
-  height: 100%;
-  background-color: #4a1392;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
   padding-top: 20px;
-  left: -250px;
-  transition: 0.3s;
-  z-index: 1000;
 }
 
 .navbar.open {
-  left: 0;
+  width: 80px;
 }
+
 .navbar-brand {
-  padding-left: 20px;
+  display: block;
+  margin: 0 auto 20px auto;
+  max-width: 100px;
 }
-.navbar-nav {
-  display: flex;
-  flex-direction: column;
-  padding-left: 20px;
-}
+
 .nav-item {
-  margin-bottom: 20px;
+  padding: 10px;
 }
+
 .nav-link {
-  color: white;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
   text-decoration: none;
-  font-size: 18px;
-  transition: 0.3s;
+  padding: 10px;
+  border-radius: 5px;
 }
+
 .nav-link:hover {
-  color: #d4d4d4;
+  background-color: #e46ac5;
 }
+
+.nav-link i {
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+.nav-text {
+  display: inline;
+  transition: opacity 0.3s;
+}
+
+.navbar.open .nav-text {
+  display: none;
+}
+
 .navbar-toggler {
-  position: fixed;
+  position: absolute;
   top: 10px;
   left: 10px;
+  background: none;
   border: none;
-  padding: 10px;
+  color: #ffffff;
+  font-size: 24px;
   cursor: pointer;
-  z-index: 1100;
 }
-.navbar-toggler-icon {
-  display: block;
-  width: 25px;
-  height: 3px;
-  background-color: rgb(0, 0, 0);
-  margin: 5px 0;
+
+.navbar-toggler:focus {
+  outline: none;
 }
+
 .main-content {
-  margin-left: 0;
+  margin-left: 240px;
   transition: margin-left 0.3s;
 }
-.main-content.shifted {
-  margin-left: 250px;
-}
-img {
-  width: 100px;
+
+.navbar.open + .main-content {
+  margin-left: 80px;
 }
