--- a/frontend/src/app/_auth/login/login.component.html
+++ b/frontend/src/app/_auth/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<div class="login-container">
+    <h1 class="title fw-bold">TechnoAging</h1>
+
+    <div class="login-form">
+        <form>
+        <div class="form-group">
+            <input type="email" placeholder="E-mail" class="form-control" required />
+        </div>
+        
+        <div class="form-group">
+            <input type="password" placeholder="Senha" class="form-control" required />
+        </div>
+        
+        <div class="password-reset">
+            <a href="#">Recuperar senha</a>
+        </div>
+        
+        <button type="submit" class="login-button">Login</button>
+        </form>
+    </div>
+</div>
