--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,9 @@
-<app-navbar [isOpen]="isOpen" (toggleMenu)="toggleMenu()"></app-navbar>
-<div class="main-content" [ngClass]="{'shifted': isOpen}">
+<app-navbar *ngIf="!isAuthRoute" [isOpen]="isOpen" (toggleMenu)="toggleMenu()"></app-navbar>
+
+<div class="main-content" [ngClass]="{'shifted': isOpen}" *ngIf="!isAuthRoute">
+  <router-outlet></router-outlet>
+</div>
+
+<div *ngIf="isAuthRoute">
   <router-outlet></router-outlet>
 </div>
