--- a/frontend/src/app/_auth/login/login.component.html
+++ b/frontend/src/app/_auth/login/login.component.html
@@ -1,21 +1,53 @@
 <div class="login-container">
     <h1 class="title fw-bold">TechnoAging</h1>
-
     <div class="login-form">
-        <form>
-        <div class="form-group">
-            <input type="email" placeholder="E-mail" class="form-control" required />
-        </div>
-        
-        <div class="form-group">
-            <input type="password" placeholder="Senha" class="form-control" required />
-        </div>
-        
-        <div class="password-reset">
-            <a href="#">Recuperar senha</a>
-        </div>
-        
-        <button type="submit" class="login-button">Login</button>
+        <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+            <div class="form-group">
+                <input 
+                    type="text" 
+                    placeholder="CPF" 
+                    class="form-control" 
+                    [(ngModel)]="loginRequest.cpf" 
+                    name="cpf" 
+                    required 
+                    #cpfInput="ngModel"
+                    mask="000.000.000-00" 
+                />
+                <div *ngIf="cpfInput.invalid && (cpfInput.dirty || cpfInput.touched)" class="text-danger">
+                    <small *ngIf="cpfInput.errors?.['required']">CPF é obrigatório</small>
+                </div>
+            </div>
+           
+            <div class="form-group">
+                <input 
+                    type="password" 
+                    placeholder="Senha" 
+                    class="form-control" 
+                    [(ngModel)]="loginRequest.senha" 
+                    name="senha" 
+                    required 
+                    #senhaInput="ngModel"
+                />
+                <div *ngIf="senhaInput.invalid && (senhaInput.dirty || senhaInput.touched)" class="text-danger">
+                    <small *ngIf="senhaInput.errors?.['required']">Senha é obrigatória</small>
+                </div>
+            </div>
+           
+            <div class="password-reset">
+                <a href="#">Recuperar senha</a>
+            </div>
+           
+            <div *ngIf="errorMessage" class="alert alert-danger">
+                {{ errorMessage }}
+            </div>
+
+            <button 
+                type="submit" 
+                class="login-button" 
+                [disabled]="loginForm.invalid"
+            >
+                Login
+            </button>
         </form>
     </div>
 </div>
