--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -38,6 +38,11 @@ body {
   color: #333;
 }
 
+.back {
+  text-decoration: none;
+  margin-bottom: 1em !important;
+}
+
 .card {
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
