--- a/frontend/src/app/tecnico/tecnico-dashboard/tecnico-dashboard.component.html
+++ b/frontend/src/app/tecnico/tecnico-dashboard/tecnico-dashboard.component.html
@@ -51,23 +51,23 @@
         <div class="forms-grid">
           <div class="form-card">
             <h3>Nível de Atividade Física</h3>
-            <button (click)="navigateToFormulario('atividade-fisica')">Preencher</button>
+            <button (click)="navigateToFormulario('form-sedentarismo')">Preencher</button>
           </div>
           <div class="form-card">
             <h3>Vulnerabilidade Clínico Funcional</h3>
-            <button (click)="navigateToFormulario('vulnerabilidade')">Preencher</button>
+            <button (click)="navigateToFormulario('form-ivcf20')">Preencher</button>
           </div>
           <div class="form-card">
             <h3>Fatigabilidade de Pittsburgh</h3>
-            <button (click)="navigateToFormulario('pittsburgh')">Preencher</button>
+            <button (click)="navigateToFormulario('form-pfs')">Preencher</button>
           </div>
           <div class="form-card">
             <h3>Mini Exame do Estado Mental</h3>
-            <button (click)="navigateToFormulario('meem')">Preencher</button>
+            <button (click)="navigateToFormulario('form-minimental')">Preencher</button>
           </div>
           <div class="form-card">
             <h3>FACT-F</h3>
-            <button (click)="navigateToFormulario('fact-f')">Preencher</button>
+            <button (click)="navigateToFormulario('form-factf')">Preencher</button>
           </div>
         </div>
       </div>
