--- a/frontend/src/app/tecnico/tecnico-layout/tecnico-layout.component.html
+++ b/frontend/src/app/tecnico/tecnico-layout/tecnico-layout.component.html
@@ -1,4 +1,4 @@
-<div class="container container-funcionario mt-2">
+<div class="container container-funcionario" [ngClass]="{'mt-2': !linkVoltarVisivel}">
   <a class="fs-5 back" *ngIf="linkVoltarVisivel" (click)="voltar()"><i class="fas fa-chevron-left"></i> Voltar</a>
   <router-outlet></router-outlet>
 </div>
