--- a/frontend/src/app/tecnico/tecnico-dashboard/tecnico-dashboard.component.html
+++ b/frontend/src/app/tecnico/tecnico-dashboard/tecnico-dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-container">
-    <header class="header">
+    <header class="header mt-4">
       <h1>Dashboard</h1>
       <div class="user-info" *ngIf="currentTecnico">
         <span>Bem-vindo(a), <a [routerLink]="['/tecnico/editar-perfil']">{{currentTecnico.nome}}</a></span>
@@ -38,6 +38,7 @@
               <p>CPF: {{paciente.cpf}}</p>
               <p>Idade: {{paciente.idade}} anos</p>
               <div class="card-actions">
+                <button (click)="consultarPerfil(paciente)">Ver Perfil</button>
                 <button (click)="viewPatientHistory(paciente)">Ver Histórico</button>
                 <button (click)="compareResults()">Comparar Resultados</button>
               </div>
