--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,27 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+
+@media (min-width: 768px) {
+  .action-buttons .btn {
+     margin-bottom: 0 !important;
+  }
+}
 
 * {
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth !important;
-}
-
-.action-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5px;
-}
-
-.action-buttons .btn {
-  flex: 1;
-  margin-bottom: 5px;
-}
-
-@media (min-width: 768px) {
-  .action-buttons .btn {
-     margin-bottom: 0;
-  }
 }
 
 body {
@@ -29,31 +17,31 @@ body {
 }
 
 .header {
-  background-color: #C2DFF0;
-  padding: 15px;
+  background-color: #C2DFF0 !important;
+  padding: 15px !important;
 }
 
 .header h1 {
-  font-size: 24px;
-  font-weight: bold;
-  color: #333;
+  font-size: 24px !important;
+  font-weight: bold !important;
+  color: #333 !important;
 }
 
 .back {
-  text-decoration: none;
+  text-decoration: none !important;
   margin-bottom: 1em !important;
 }
 
 .card {
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px !important;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1) !important;
 }
 
 .card-header {
-  background-color: #EAEAEA;
-  border-bottom: 2px solid #CCCCCC;
-  font-weight: bold;
-  color: #333;
+  background-color: #EAEAEA !important;
+  border-bottom: 2px solid #CCCCCC !important;
+  font-weight: bold !important;
+  color: #333 !important;
 }
 
 .table {
@@ -65,23 +53,53 @@ body {
   font-weight: bold;
   color: #555;
 }
-
 .table td, .table th {
   vertical-align: middle;
   padding: auto;
-  word-wrap: anywhere;
 }
-
 .img-fluid {
-  border-radius: 10px;
+  border-radius: 10px !important;
 }
 
 .main-content {
-  transition: margin-left 0.3s ease;
-  padding: 20px;
-  padding-top: 60px;
+  transition: margin-left 0.3s ease !important;
+  padding: 20px !important;
+  padding-top: 60px !important;
 }
 
 .main-content.shifted {
-  margin-left: 250px;
+  margin-left: 250px !important;
+}
+
+.action-buttons {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  gap: 5px !important;
+}
+
+.action-buttons .btn {
+  flex: 1 !important;
+  margin-bottom: 5px !important;
+}
+
+.d-grid button {
+  border-radius: 30px !important;
+}
+
+.btn-primary {
+  background-color: #4A90E2 !important;
+  border: none !important;
+}
+
+.btn-primary:hover {
+  background-color: #357ABD !important;
+}
+
+.btn-secondary {
+  background-color: #7B8B9A !important;
+  border: none !important;
+}
+
+.btn-secondary:hover {
+  background-color: #5D6A74 !important;
 }
