--- a/frontend/src/app/_auth/login/login.component.html
+++ b/frontend/src/app/_auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <h1 class="title fw-bold">TechnoAging</h1>
+    <h1 class="title fw-bold">TecnoAging</h1>
     <div class="login-form">
         <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
             <div class="form-group">
