--- a/frontend/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
+++ b/frontend/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
@@ -59,7 +59,7 @@
                        </div>
                        <div class="col-4">
                          <select class="form-select form-select-sm" formControlName="ufNasc">
-                           <option value="">UF</option>
+                           <option value="" disabled>UF</option>
                            <option *ngFor="let uf of ufs" [value]="uf">{{uf}}</option>
                          </select>
                        </div>
@@ -114,11 +114,11 @@
                      <td>
                        <div class="row">
                          <div class="col-8">
-                           <input type="text" class="form-control form-control-sm" formControlName="orgaoEmissor">
+                           <input type="text" class="form-control form-control-sm me-0" formControlName="orgaoEmissor">
                          </div>
                          <div class="col-4">
-                           <select class="form-select form-select-sm" formControlName="ufEmissor">
-                             <option value="">UF</option>
+                           <select class="form-select form-select-sm ms-0" formControlName="ufEmissor">
+                             <option value="" disabled>UF</option>
                              <option *ngFor="let uf of ufs" [value]="uf">{{uf}}</option>
                            </select>
                          </div>
@@ -147,7 +147,7 @@
                      <div class="input-group">
                        <input class="form-control form-control-sm"
                               type="text"
-                              formControlName="cep"
+                              formControlName="CEP"
                               #cepInput
                               (blur)="buscarCep(cepInput.value)"
                               placeholder="00000-000">
@@ -177,8 +177,8 @@
                          <input type="text" class="form-control form-control-sm" formControlName="municipio">
                        </div>
                        <div class="col-4">
-                         <select class="form-select form-select-sm" formControlName="uf">
-                           <option value="">UF</option>
+                         <select class="form-select form-select-sm" formControlName="UF">
+                           <option value="" disabled>UF</option>
                            <option *ngFor="let uf of ufs" [value]="uf">{{uf}}</option>
                          </select>
                        </div>
@@ -193,50 +193,53 @@
  
        <!-- Contatos -->
        <div class="col-md-6">
-         <div class="card mb-4">
-           <div class="card-header d-flex justify-content-between">
-             <h4><i class="fas fa-pencil"></i> <i class="fas fa-phone"></i> Editar contatos</h4>
-             <button type="button" class="btn btn-sm btn-success" (click)="adicionarContato()">
-               <i class="fas fa-plus"></i> Adicionar
-             </button>
-           </div>
-           <div class="card-body">
-             <div formArrayName="contatos">
-               <div *ngFor="let contato of contatosFormArray.controls; let i=index" [formGroupName]="i" class="mb-3">
-                 <table class="table table-bordered">
-                   <tbody>
-                     <tr>
-                       <th scope="row">Nome</th>
-                       <td><input type="text" class="form-control form-control-sm" formControlName="nome"></td>
-                     </tr>
-                     <tr>
-                       <th scope="row">Telefone</th>
-                       <td><input type="text" class="form-control form-control-sm" formControlName="telefone"></td>
-                     </tr>
-                     <tr>
-                       <th scope="row">Parentesco</th>
-                       <td>
-                         <select class="form-select form-select-sm" formControlName="parentesco">
-                           <option value="">Selecione...</option>
-                           <option value="Filho">Filho(a)</option>
-                           <option value="Conjuge">Cônjuge</option>
-                           <option value="Pai">Pai</option>
-                           <option value="Mae">Mãe</option>
-                           <option value="Outro">Outro</option>
-                         </select>
-                       </td>
-                     </tr>
-                   </tbody>
-                 </table>
-                 <button type="button" class="btn btn-sm btn-danger" (click)="removerContato(i)">
-                   <i class="fas fa-trash"></i> Remover
-                 </button>
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
+        <div class="card mb-4">
+          <div class="card-header d-flex justify-content-between">
+            <h4><i class="fas fa-pencil"></i> <i class="fas fa-phone"></i> Editar contatos</h4>
+            <button type="button" class="btn btn-sm btn-success" (click)="adicionarContato()">
+              <i class="fas fa-plus"></i> Adicionar
+            </button>
+          </div>
+          <div class="card-body">
+            <div formArrayName="contatos">
+              <ng-container *ngFor="let contato of contatosFormArray.controls; let i=index; let last=last">
+                <div [formGroupName]="i">
+                  <table class="table table-bordered mb-2">
+                    <tbody>
+                      <tr>
+                        <th scope="row">Nome</th>
+                        <td><input type="text" class="form-control form-control-sm" formControlName="nome"></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Telefone</th>
+                        <td><input type="text" class="form-control form-control-sm" formControlName="telefone"></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Parentesco</th>
+                        <td>
+                          <select class="form-select form-select-sm" formControlName="parentesco">
+                            <option value="">Selecione...</option>
+                            <option *ngFor="let parentesco of parentescos" [value]="parentesco">
+                              {{parentesco}}
+                            </option>
+                          </select>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <div class="mb-3">
+                    <button type="button" class="btn btn-sm btn-danger" (click)="removerContato(i)">
+                      <i class="fas fa-trash"></i> Remover
+                    </button>
+                  </div>
+                  <hr *ngIf="!last" class="my-4" />
+                </div>
+              </ng-container>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
  
      <!-- Ações -->
      <div class="text-center">
